# ctgfx

./: .gitignore  CMakeLists.txt  DEPS  README.md
src/core/: Bitmap.cpp
tool/: Program.cs  tool.csproj  tool.slnx
